# Eistype

./: CMakeLists.txt  LITCENSE  README.md  eistype.cpp  main.cpp  package-win.sh  spectra.cpp  spectra_c.cpp  strops.cpp  strops.h  type_c.cpp
kisstype/: spectra.h  type.h
kisstype/c/: spectra.h  type.h
pkgconfig/: libkisstype.pc.in
